k8s/2nd-brain/nutritrace/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nutritrace
  name: nutritrace
  namespace: nutritrace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nutritrace
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nutritrace
    spec:
      containers:
        - name: nutritrace
          image: ghcr.io/traceapps/nutritrace:latest@sha256:3390d69c488d8cef4eaff7dd5b245af27877648198ac799a62996980c0e47d0d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: db
            - mountPath: /data/uploads
              name: uploads
      restartPolicy: Always
      volumes:
        - name: db
          hostPath:
            path: /config/nutritrace/db
            type: DirectoryOrCreate
        - name: uploads
          hostPath:
            path: /config/nutritrace/uploads
            type: DirectoryOrCreate
